tests/solidity/bad/nocontract.sol
contract Abstract {
  function nothere() pure public {}
  function echidna_nothere() pure public {}
}
